--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,48 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  gap: 50px;
+  height: 100vh;
+  width: 100vw;
+  padding: 50px;
+  background-color: darkslategray;
 }
 
 .section {
-  background-color: red;
+  background-color: lightgray;
+  padding: 30px;
+  width: 800px;
+}
+
+h2 {
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 10px;
+  height: 100px;
+  padding: 30px;
+  border: 0;
+}
+
+.input-div {
+  display: flex;
+}
+
+label {
+  width: 150px;
+}
+
+button {
+  width: 100px;
+  align-self: flex-end;
 }
